--- a/coc-settings.json
+++ b/coc-settings.json
@@ -59,20 +59,6 @@
     "coc.preferences.snippetStatusText": "Ⓢ ",
     //tslint
     "tslint.autoFixOnSave": true,
-    //prettier
-    "coc.preferences.formatOnSaveFiletypes": ["css","markdown"],
-    "prettier.statusItemText": "ⓟ ",
-    "prettier.eslintIntegration": true,
-    "prettier.tslintIntegration": true,
-    "prettier.stylelintIntegration": true,
-    //emmet
-    "emmet.includeLanguages": {"vue-html": "html", "javascript": "javascriptreact"},
-    //python
-    "python.autoComplete.addBrackets": true,
-    // eslint
-    "eslint.filetypes": ["javascript", "javascript.jsx", "javascriptreact"],
-    "eslint.autoFix": true,
-    "eslint.autoFixOnSave": true,
-    "languageserver": {
-        }
+    // custom lang servers
+    "languageserver": {}
 }
