--- a/core/dein/plugins.yaml
+++ b/core/dein/plugins.yaml
@@ -1,37 +1,43 @@
-# why use yaml to manage plugins
-# see http://genkisugimoto.com/blog/manage-vim-plugins-via-yaml/
-
 # StartUp Plugins{{{
+
 - repo: Shougo/dein.vim
-- repo: honza/vim-snippets
 - repo: taigacute/spaceline.vim
+
 - repo: bagrat/vim-buffet
   hook_add: source $VIM_PATH/core/plugins/buffet.vim
-#}}}
+
+- repo: wakatime/vim-wakatime # add key bindings to allkey.vim
+
+  #}}}
 
 # Core Plugins{{{
+
 - repo: neoclide/coc.nvim
   merge: 0
-  rev: release
+  build: "yarn install --frozen-lockfile"
   hook_add: source  $VIM_PATH/core/plugins/coc.vim
-# }}}
+
+  # }}}
 
 
 # Lazy Loading
 # ==========================================
 
 # Denite{{{
+
 - repo: Shougo/denite.nvim
   on_cmd: Denite
   depends: vim-devicons
   hook_source: |
         source  $VIM_PATH/core/plugins/denite.vim
         source  $VIM_PATH/core/plugins/denite_menu.vim
+
 - { repo: chemzqm/denite-git, on_source: denite.nvim }
 
 # }}}
 
 # Interface{{{
+
 - repo: ryanoasis/vim-devicons
   hook_add: let g:webdevicons_enable_denite = 1
 
@@ -44,14 +50,6 @@
 - repo: kizza/actionmenu.nvim
   on_path: .*
 
-- repo: mhinz/vim-startify
-  on_cmd: Startify
-  depends: vim-devicons
-  hook_source: source  $VIM_PATH/core/plugins/startify.vim
-  hook_post_source: |
-      function! StartifyEntryFormat()
-        return 'WebDevIconsGetFileTypeSymbol(absolute_path) ." ". entry_path'
-      endfunction
 - repo: junegunn/vim-easy-align
   on_ft: [vim,json,go,html,js,jsx,py,css,less,tmpl,toml,xml,sql,Dockerfile]
 
@@ -61,15 +59,7 @@
   hook_add: |
         let g:comfortable_motion_no_default_key_mappings = 1
         let g:comfortable_motion_impulse_multiplier = 1
-- repo: rizzatti/dash.vim
-  on_map: { n: <Plug> }
-  hook_add: |
-      let g:dash_map = {
-        \ 'javascript': ['javascript', 'NodeJS'],
-        \ 'javascript.jsx': ['react'],
-        \ 'html': ['html', 'svg'],
-        \ 'go' : 'Go',
-        \}
+
 - repo: thinca/vim-quickrun
   on_cmd: QuickRun
   hook_add: |
@@ -79,9 +69,9 @@
             \   },
             \}
         let g:quickrun_no_default_key_mappings = 1
-- {repo: simnalamburt/vim-mundo , on_map: { n: <Plug> } }
 
-- {repo: tpope/vim-repeat , on_map: .* }
+- {repo: simnalamburt/vim-mundo , on_map: { n: <Plug> } }
+- {repo: tpope/vim-repeat , on_map: .* } # maybe remove
 
 - repo: liuchengxu/vim-which-key
   on_cmd: [Whichkey, Whichkey!]
@@ -91,7 +81,8 @@
         call which_key#register(';', 'g:which_key_localmap')
         call which_key#register(']', 'g:which_key_rsbgmap')
         call which_key#register('[', 'g:which_key_lsbgmap')
-- repo: easymotion/vim-easymotion
+
+- repo: easymotion/vim-easymotion # maybe remove
   on_map: { n: <Plug> }
   hook_source: |
         let g:EasyMotion_do_mapping = 0
@@ -99,9 +90,11 @@
         let g:EasyMotion_keys = 'fjdkswbeoavn'
         let g:EasyMotion_smartcase = 1
         let g:EasyMotion_use_smartsign_us = 1
+
 # }}}
 
 # File manager{{{
+
 - repo: Shougo/defx.nvim
   on_cmd: Defx
   hook_source: source  $VIM_PATH/core/plugins/defx.vim
@@ -116,8 +109,9 @@
 # }}}
 
 # Search Plugins{{{
+
 - repo: junegunn/fzf
-  build: './install --all'
+  build: "./install --all"
   merged: 0
 
 - repo: junegunn/fzf.vim
@@ -129,52 +123,32 @@
 # }}}
 
 # Git Plugins{{{
-- { repo: taigacute/magit.vim, on_cmd: Magit }
 
+- { repo: taigacute/magit.vim, on_cmd: Magit }
 - { repo: lambdalisue/gina.vim, on_cmd: Gina }
 
 - repo: chemzqm/vim-easygit
   on_cmd: [Gcd, Glcd, Gcommit, Gblame, Gstatus, Gdiff, Gbrowse, Gstatus, Gpush]
   hook_source: let g:easygit_enable_command = 1
 
-
-# use coc-git instead of vim-gitgutter
-# - repo: airblade/vim-gitgutter
-#   on_path: .*
-#   hook_source: source ~/.config/nvim/core/plugins/vim-gitgutter.vim
-
 # }}}
 
 # Language{{{
 
-- { repo: honza/dockerfile.vim, on_ft: Dockerfile }
+- { repo: honza/dockerfile.vim, on_ft: Dockerfile } # maybe remove
 - { repo: junegunn/vim-emoji, on_ft: [markdown,vim] }
-
-- { repo: Vimjas/vim-python-pep8-indent, on_ft: python }
-- { repo: tmhedberg/SimpylFold, on_ft: python }
-- { repo: vim-scripts/python_match.vim, on_ft: python }
-- repo: vim-python/python-syntax
-  on_ft: python
-  hook_add: let g:python_highlight_all = 1
-
-- { repo: neoclide/vim-jsx-improve, on_ft: [javascript,jsx,javascript.jsx]}
-
-- { repo: cespare/vim-toml, on_ft: toml }
-- { repo: vim-scripts/xml.vim, on_ft: xml}
-- { repo: pearofducks/ansible-vim, on_ft: [ yaml.ansible, ansible_hosts ]}
+- { repo: cespare/vim-toml, on_ft: toml } # maybe remove for coc-xml
+- { repo: vim-scripts/xml.vim, on_ft: xml} # maybe remove
+- { repo: pearofducks/ansible-vim, on_ft: [ yaml.ansible, ansible_hosts ]} # maybe remove for coc-yaml instead
 
 - repo: elzr/vim-json
   on_ft: json
   hook_add: let g:vim_json_syntax_conceal = 0
 
-- repo: fatih/vim-go
-  on_ft: go
-  hook_source: source  $VIM_PATH/core/plugins/vim-go.vim
-
 - repo: tpope/vim-markdown
   on_ft: markdown
   hook_add: |
-        let g:markdown_fenced_languages = [
+        let g:markdown_fenced_languages = [ # add .c & .h
           \ 'html',
           \ 'bash=sh',
           \ 'css',
@@ -185,6 +159,7 @@
 # }}}
 
 # Coding{{{
+
 - repo: tyru/caw.vim
   on_map: { nx: <Plug> }
 
@@ -204,20 +179,6 @@
   on_cmd: TagbarToggle
   hook_source: source  $VIM_PATH/core/plugins/tagbar.vim
 
-- repo: mattn/emmet-vim
-  on_ft: [html,css,jsx,javascript,javascript.jsx]
-  on_event: InsertEnter
-  hook_add: |
-        let g:use_emmet_complete_tag = 0
-        let g:user_emmet_install_global = 0
-        let g:user_emmet_install_command = 0
-        let g:user_emmet_mode = 'i'
-        let g:user_emmet_leader_key='<C-g>'
-        let g:user_emmet_settings = {
-            \  'javascript.jsx' : {
-            \      'extends' : 'jsx',
-            \  },
-        \}
 - repo: luochen1990/rainbow
   on_ft: [python,javascript,jsx,javascript.jsx,html,css,go,vim,toml]
   hook_source: let g:rainbow_active = 1
@@ -227,50 +188,25 @@
   hook_source: |
         call echodoc#enable()
         let g:echodoc#type = "virtual"
-# - repo: w0rp/ale
-#   hook_add: source ~/.config/nvim/core/plugins/vim-ale.vim
 
 # }}}
 
 # Writing{{{
+
 - repo: iamcco/markdown-preview.nvim
   on_ft: [markdown,pandoc.markdown,rmd]
   hook_post_source: 'call mkdp#util#install()'
   hook_source: |
       let g:mkdp_auto_start = 1
-- repo: junegunn/goyo.vim
-  on_cmd: Goyo
-  hook_source: source  $VIM_PATH/core/plugins/goyo.vim
 
-- repo: junegunn/Limelight.vim
-  on_cmd: Limelight
 #}}}
 
 # TextObjectOperator{{{
-- { repo: AndrewRadev/splitjoin.vim, on_map: { n: <Plug>Splitjoin }}
-- { repo: terryma/vim-expand-region, on_map: { x: <Plug> }}
-- { repo: kana/vim-textobj-user, on_func: textobj#user# }
-- { repo: kana/vim-operator-user, lazy: 1 }
+
 - { repo: kana/vim-niceblock, on_map: { x: <Plug> }}
 
-- repo: kana/vim-smartchr
-  on_event: InsertCharPre
-
-- repo: kana/vim-operator-replace
-  depends: vim-operator-user
-  on_map: { vnx: <Plug> }
-
-- repo: machakann/vim-sandwich
+- repo: machakann/vim-sandwich # this might be broken due to textobj maybe.. not experienced enough
   on_map: { vnx: [<Plug>(operator-sandwich-,<Plug>(textobj-sandwich-]}
-
-- repo: osyo-manga/vim-textobj-multiblock
-  depends: vim-textobj-user
-  on_map: { ox: <Plug> }
-  hook_add:  let g:textobj_multiblock_no_default_key_mappings = 1
 
 # }}}
 
-# CommentPLuins too old, or find much better plugins{{{
-# - repo: rhysd/vim-operator-surround
-#   depends: [vim-operator-user, vim-textobj-multiblock]
-#   on_map:  { vnx : <Plug> }
