--- a/core/dein/plugins.yaml
+++ b/core/dein/plugins.yaml
@@ -194,7 +194,8 @@
 # Writing{{{
 
 - repo: iamcco/markdown-preview.nvim
-  on_ft: [markdown,pandoc.markdown,rmd]
+  on_ft: [markdown,pandoc.markdown,rmd,md]
+  build: "cd app & npm install"
   hook_post_source: 'call mkdp#util#install()'
   hook_source: |
       let g:mkdp_auto_start = 1
