--- a/coc-settings.json
+++ b/coc-settings.json
@@ -60,5 +60,17 @@
     //tslint
     "tslint.autoFixOnSave": true,
     // custom lang servers
-    "languageserver": {}
+    "languageserver": {
+        "ccls": {
+            "command": "ccls",
+            "filetypes": ["c", "cpp", "objc", "objcpp"],
+            "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
+            "initializationOptions": {
+                "cache": {
+                    "directory": ".ccls-cache"
+                },
+                "highlight": { "lsRanges" : true }
+            }
+        }
+    }
 }
