--- a/core/dein/plugins.yaml
+++ b/core/dein/plugins.yaml
@@ -197,7 +197,7 @@
 
 - repo: iamcco/markdown-preview.nvim
   on_ft: [markdown,pandoc.markdown,rmd,md]
-  hook_post_source: 'call mkdp#util#install()'
+  build: "cd app && npm i"
   hook_source: |
       let g:mkdp_auto_start = 1
 
