New plugin: vimtex-cocvimtex

--- a/core/dein/plugins.yaml
+++ b/core/dein/plugins.yaml
@@ -171,6 +171,10 @@
   hook_source: |
       let g:mkdp_auto_start = 1
 
+
+- repo: lervag/vimtex
+  on_ft: [tex]
+
 # }}}
 
 # TextObjectOperator{{{
