--- a/core/dein/plugins.yaml
+++ b/core/dein/plugins.yaml
@@ -17,6 +17,24 @@
   hook_add: let g:deoplete#enable_at_startup = 1
   hook_source: source $VIM_PATH/core/plugins/deoplete.vim
 
+- repo: autozimu/LanguageClient-neovim
+  rev: "next"
+  build: './install.sh'
+  hook_source: source  $VIM_PATH/core/plugins/LanguageClient.vim
+
+- repo: Shougo/echodoc.vim
+  hook_add: let g:echodoc#enable_at_startup = 1
+  hook_source: source $VIM_PATH/core/plugins/echodoc.vim
+
+- repo: Shougo/deoplete-clangx
+- repo: Shougo/neoinclude.vim
+- repo: sbdchd/neoformat
+
+- repo: scrooloose/nerdcommenter
+
+- repo: bagrat/vim-buffet
+  hook_add: source $VIM_PATH/core/plugins/vim-buffet.vim
+
 # Lazy Loading
 # ==========================================
 
@@ -37,9 +55,6 @@
   hook_add: let g:webdevicons_enable_denite = 1
 
 - { repo: rhysd/accelerated-jk, on_map: { n: <Plug> } }
-
-- repo: kizza/actionmenu.nvim
-  on_path: .*
 
 # }}}
 
@@ -73,40 +88,21 @@
 - { repo: taigacute/magit.vim, on_cmd: Magit }
 - { repo: lambdalisue/gina.vim, on_cmd: Gina }
 
+- repo: airblade/vim-gitgutter
+  on_path: .*
+  hook_source: source $VIM_PATH/core/plugins/vim-gitgutter.vim
+
 # }}}
 
 # Language{{{
-
-- repo: tbodt/deoplete-tabnine
-  build: "./install.sh"
-
-- repo: Shougo/deoplete-clangx
-  on_ft: [c,h]
-  hook: source  $VIM_PATH/core/plugins/deoplete-clangx.vim
-
-- repo: Shougo/neoinclude.vim
-  on_ft: [c,h]
 
 - repo: tpope/vim-markdown
   on_ft: markdown
   hook_add: let g:markdown_fenced_languages = ["c", "bash=sh", "go"]
 
+- repo: fszymanski/deoplete-emoji
+
 - repo: Shougo/neco-vim
-  on_ft: vim
-
-# }}}
-
-# Coding{{{
-
-- repo: tpope/vim-surround
-
-- repo: Yggdroot/indentLine
-  on_ft: [c,h]
-  hook_source: source $VIM_PATH/core/plugins/indentline.vim
-
-- repo: luochen1990/rainbow
-  on_ft: [c,h]
-  hook_source: let g:rainbow_active = 1
 
 # }}}
 
