--- a/core/dein/plugins.yaml
+++ b/core/dein/plugins.yaml
@@ -1,60 +1,82 @@
-# StartUp Plugins{{{
-
-- repo: challenger-deep-theme/vim
+# Core Plugins {{{
 
 - repo: Shougo/dein.vim
-  depends: dein-ui.vim
 
 - repo: wsdjeg/dein-ui.vim
-  depends: dein.vim
+  depends: Shougo/dein.vim
 
-- repo: vim-airline/vim-airline
-  hook_add: source $VIM_PATH/core/plugins/vim-airline.vim
-
-- repo: wakatime/vim-wakatime
+- repo: challenger-deep-theme/vim
 
 - repo: Shougo/deoplete.nvim
   hook_add: let g:deoplete#enable_at_startup = 1
   hook_source: source $VIM_PATH/core/plugins/deoplete.vim
 
-- repo: autozimu/LanguageClient-neovim
-  rev: "next"
-  build: './install.sh'
-  hook_source: source  $VIM_PATH/core/plugins/LanguageClient.vim
+# }}}
+
+# language plugins {{{
+
+- repo: wsdjeg/vim-assembly
+  merged: 0
+
+- repo: Shougo/deoplete-clangx
+
+- repo: arakashic/chromatica.nvim
+  merged: 0
+  hook_source: source $VIM_PATH/core/plugins/chromatica.vim
 
 - repo: Shougo/echodoc.vim
   hook_add: let g:echodoc#enable_at_startup = 1
   hook_source: source $VIM_PATH/core/plugins/echodoc.vim
 
-- repo: Shougo/deoplete-clangx
 - repo: Shougo/neoinclude.vim
+
+- repo: tpope/vim-markdown
+  on_ft: markdown
+  hook_add: let g:markdown_fenced_languages = ["c", "bash=sh", "go"]
+
+- repo: fszymanski/deoplete-emoji
+
+# }}}
+
+# Tools {{{
+
+- repo: editorconfig/editorconfig-vim
+  merged: 0
+
+- repo: wakatime/vim-wakatime
+
 - repo: sbdchd/neoformat
 
-- repo: scrooloose/nerdcommenter
+- repo: neomake/neomake
+  hook_source: source $VIM_PATH/core/plugins/neomake.vim
 
-- repo: bagrat/vim-buffet
-  hook_add: source $VIM_PATH/core/plugins/vim-buffet.vim
-
-# Lazy Loading
-# ==========================================
-
-# Denite{{{
-
-- repo: Shougo/denite.nvim
-  on_cmd: Denite
-  depends: vim-devicons
-  hook_source: |
-          source  $VIM_PATH/core/plugins/denite.vim
-          source  $VIM_PATH/core/plugins/denite_menu.vim
+- repo: ntpeters/vim-better-whitespace
+  on_cmd:
+    [
+      "StripWhitespace",
+      "ToggleWhitespace",
+      "DisableWhitespace",
+      "EnableWhitespace",
+    ]
 
 # }}}
 
 # Interface{{{
 
+- repo: Shougo/denite.nvim
+  on_cmd: Denite
+  hook_source: |
+    source  $VIM_PATH/core/plugins/denite.vim
+    source  $VIM_PATH/core/plugins/denite_menu.vim
+
 - repo: ryanoasis/vim-devicons
   hook_add: let g:webdevicons_enable_denite = 1
 
-- { repo: rhysd/accelerated-jk, on_map: { n: <Plug> } }
+- repo: vim-jp/vimdoc-ja
+
+- repo: vim-chat/vim-chat
+  merged: 0
+  loadconf: 1
 
 # }}}
 
@@ -77,7 +99,7 @@
 
 - repo: junegunn/fzf.vim
   depends: fzf
-  on_cmd: [Colors,Rg,Buffers]
+  on_cmd: [Colors, Rg, Buffers]
   on_func: Fzf_dev
   hook_source: source  $VIM_PATH/core/plugins/fzf.vim
 
@@ -85,24 +107,10 @@
 
 # Git Plugins{{{
 
-- { repo: taigacute/magit.vim, on_cmd: Magit }
-- { repo: lambdalisue/gina.vim, on_cmd: Gina }
+- repo: lambdalisue/gina.vim
+  on_cmd: Gina
 
 - repo: airblade/vim-gitgutter
   on_path: .*
   hook_source: source $VIM_PATH/core/plugins/vim-gitgutter.vim
-
 # }}}
-
-# Language{{{
-
-- repo: tpope/vim-markdown
-  on_ft: markdown
-  hook_add: let g:markdown_fenced_languages = ["c", "bash=sh", "go"]
-
-- repo: fszymanski/deoplete-emoji
-
-- repo: Shougo/neco-vim
-
-# }}}
-
